--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,264 @@
+/* DEFAULTS */
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Julius+Sans+One&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Archivo Narrow", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* NAVBAR */
+.nav {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+}
+
+.nav ul {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.nav ul li {
+  display: inline-block;
+  padding: 40px 15px;
+  font-size: 20px;
+}
+
+.nav-link {
+  color: #fff;
+  opacity: 0.5;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  transition: ease-in-out opacity 0.5s;
+}
+
+.nav-link:hover {
+  opacity: 1;
+}
+
+/* ANIMATED BACKGROUND */
+.animated-bg {
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+  width: 100%;
+  height: 100vh;
+  z-index: -100;
+}
+
+.boxes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.boxes li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 20s linear infinite;
+  bottom: -150px;
+}
+
+.boxes li:nth-child(1) {
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+.boxes li:nth-child(2) {
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.boxes li:nth-child(3) {
+  left: 70%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+}
+.boxes li:nth-child(4) {
+  left: 42%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 10s;
+}
+.boxes li:nth-child(5) {
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+.boxes li:nth-child(6) {
+  left: 65%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-800px) rotate(360deg);
+    opacity: 0;
+  }
+}
+
+/* MAIN CONTENT */
+.content {
+  display: flex;
+  height: 90%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-container {
+  width: 50vw;
+  height: 50vh;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 20px 50px rgba(59, 43, 91, 0.7);
+}
+
+/* HOME */
+.home {
+  text-align: center;
+  color: #fff;
+}
+
+.home .title {
+  color: #eee;
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+}
+
+.home .subtitle {
+  font-family: "Julius Sans One", sans-serif;
+  font-size: 6rem;
+  font-weight: 700;
+  letter-spacing: 1rem;
+  margin: 1rem 0;
+}
+
+.home .links {
+  height: 3rem;
+  padding: 2rem;
+}
+
+.home .link {
+  color: #eee;
+  opacity: 0.5;
+  margin: 1rem 2rem;
+  transition: ease-in-out all 0.3s;
+}
+
+.home .link:hover {
+  opacity: 1;
+}
+
+/* CONTACT */
+.contact {
+  width: 600px;
+  height: 600px;
+  padding: 3rem;
+  border-radius: 5px;
+  box-shadow: 0 15px 70px rgba(0, 0, 0, 1);
+}
+
+.contact .title {
+  text-align: center;
+  font-family: "Julius Sans One", sans-serif;
+  color: #eee;
+}
+
+.contact .divider {
+  width: 100px;
+  height: 10px;
+  background: #7f5a83;
+  margin: 2rem auto;
+}
+
+.contact-form {
+  max-width: 90%;
+  margin: auto;
+  padding: 0 10px;
+  overflow: hidden;
+}
+
+.form-text {
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 1rem;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 2rem 0;
+  border: 0;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 1.5rem 2rem;
+  outline: none;
+  color: #eee;
+  transition: 0.5s;
+}
+
+textarea.form-text {
+  resize: none;
+  height: 10rem;
+}
+
+.form-text:focus {
+  box-shadow: 0 0 10px 4px #7f5a83;
+}
+
+.form-button {
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  display: block;
+  margin: 2rem auto;
+  border: 0;
+  background: #7f5a83;
+  color: #eee;
+  padding: 1rem 3rem;
+  cursor: pointer;
+  transition: 0.5s;
+  text-transform: uppercase;
+}
+
+.form-button:hover {
+  background: #eee;
+  color: #7f5a83;
+  box-shadow: 0 0 10px 4px #7f5a83;
 }
