--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ code {
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
-  transition: ease-in-out opacity 0.5s;
+  transition: ease-in-out all 0.5s;
 }
 
 .nav-link:hover {
@@ -180,13 +180,74 @@ code {
 
 .home .link {
   color: #eee;
-  opacity: 0.5;
+  opacity: 0.8;
   margin: 1rem 2rem;
-  transition: ease-in-out all 0.3s;
+  transition: ease-in-out all 0.5s;
 }
 
 .home .link:hover {
   opacity: 1;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 1);
+}
+
+.home .link .icon {
+  transition: ease-in-out all 0.5s;
+}
+.home .link:hover .icon {
+  transform: scale(1.1);
+}
+
+/* ABOUT */
+.about {
+  color: #eee;
+  width: 600px;
+  height: 600px;
+  padding: 3rem;
+  border-radius: 5px;
+  box-shadow: 0 15px 70px rgba(0, 0, 0, 1);
+}
+
+.about .title {
+  text-align: center;
+  font-family: "Julius Sans One", sans-serif;
+  color: #eee;
+}
+
+.about .divider {
+  width: 100px;
+  height: 10px;
+  background: #7f5a83;
+  margin: 2rem auto;
+}
+
+.about .description {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.about .skills {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+}
+
+.about .skills .left p,
+.about .skills .right p {
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.2rem;
+}
+
+.about .skills .left p::before,
+.about .skills .right p::before {
+  display: inline-block;
+  content: "";
+  -webkit-border-radius: 0.375rem;
+  border-radius: 0.375rem;
+  height: 0.75rem;
+  width: 0.75rem;
+  margin-right: 0.5rem;
+  background-color: #7f5a83;
 }
 
 /* CONTACT */
